[package]
name = "rust-http-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A high-performance async HTTP reverse proxy with latency tracking, built in Rust"

[[bin]]
name = "rust-http-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "=1.36.0", features = ["full"] }
hyper = { version = "=1.1.0", features = ["full"] }
hyper-util = { version = "=0.1.3", features = ["full"] }
http-body-util = "=0.1.0"
chrono = "=0.4.34"
clap = { version = "=4.4.18", features = ["derive"] }
bytes = "=1.5.0"
indexmap = "=2.2.6"

[dev-dependencies]
tokio = { version = "=1.36.0", features = ["full"] }
